3.8.0/_sources/gallery/subplots_axes_and_figures/figure_title.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/subplots_axes_and_figures/figure_title.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. meta::
        :keywords: codex

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_subplots_axes_and_figures_figure_title.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_subplots_axes_and_figures_figure_title.py:


=============================================
Figure labels: suptitle, supxlabel, supylabel
=============================================

Each axes can have a title (or actually three - one each with *loc* "left",
"center", and "right"), but is sometimes desirable to give a whole figure
(or `.SubFigure`) an overall title, using `.FigureBase.suptitle`.

We can also add figure-level x- and y-labels using `.FigureBase.supxlabel` and
`.FigureBase.supylabel`.

.. GENERATED FROM PYTHON SOURCE LINES 13-33

.. code-block:: default


    import matplotlib.pyplot as plt
    import numpy as np

    from matplotlib.cbook import get_sample_data

    x = np.linspace(0.0, 5.0, 501)

    fig, (ax1, ax2) = plt.subplots(1, 2, layout='constrained', sharey=True)
    ax1.plot(x, np.cos(6*x) * np.exp(-x))
    ax1.set_title('damped')
    ax1.set_xlabel('time (s)')
    ax1.set_ylabel('amplitude')

    ax2.plot(x, np.cos(6*x))
    ax2.set_xlabel('time (s)')
    ax2.set_title('undamped')

    fig.suptitle('Different types of oscillations', fontsize=16)




.. image-sg:: /gallery/subplots_axes_and_figures/images/sphx_glr_figure_title_001.png
   :alt: Different types of oscillations, damped, undamped
   :srcset: /gallery/subplots_axes_and_figures/images/sphx_glr_figure_title_001.png, /gallery/subplots_axes_and_figures/images/sphx_glr_figure_title_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 34-36

A global x- or y-label can be set using the `.FigureBase.supxlabel` and
`.FigureBase.supylabel` methods.

.. GENERATED FROM PYTHON SOURCE LINES 36-54

.. code-block:: default



    with get_sample_data('Stocks.csv') as file:
        stocks = np.genfromtxt(
            file, delimiter=',', names=True, dtype=None,
            converters={0: lambda x: np.datetime64(x, 'D')}, skip_header=1)

    fig, axs = plt.subplots(4, 2, figsize=(9, 5), layout='constrained',
                            sharex=True, sharey=True)
    for nn, ax in enumerate(axs.flat):
        column_name = stocks.dtype.names[1+nn]
        y = stocks[column_name]
        line, = ax.plot(stocks['Date'], y / np.nanmax(y), lw=2.5)
        ax.set_title(column_name, fontsize='small', loc='left')
    fig.supxlabel('Year')
    fig.supylabel('Stock price relative to max')

    plt.show()



.. image-sg:: /gallery/subplots_axes_and_figures/images/sphx_glr_figure_title_002.png
   :alt: IBM, AAPL, MSFT, XRX, AMZN, DELL, GOOGL, ADBE
   :srcset: /gallery/subplots_axes_and_figures/images/sphx_glr_figure_title_002.png, /gallery/subplots_axes_and_figures/images/sphx_glr_figure_title_002_2_00x.png 2.00x
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  3.460 seconds)


.. _sphx_glr_download_gallery_subplots_axes_and_figures_figure_title.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: figure_title.py <figure_title.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: figure_title.ipynb <figure_title.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
